using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;
using Unity.VisualScripting;


namespace Assets {
    public class AnimationStringManager
    {

        public static string Death = "Death";
        public static string Attack = "Attack";
        public static string Running = "isRun";
        public static string Crouch = "isCrouch";
        public static string Jump = "isJump";
        public static string Fall = "isFall";
        public static string Moving = "isMoving";

        public static string Hit = "isHit";
    }
}

